    Update Case - Assigning Part - Vol Name
        Description field not working
    Case Details - Vol Dashboard - Location - Not working
    Reverse Date
    !important Case Assigned to another vol - rejected by the peroson assigned to !important
    Perform Styling Run through

Call - Saturday - Before Assummed production Sunday
    //Back Button - ProfileCompletion
    //Accept/Reject - Case-Vol-Dashboard - Admin
    //Action Center - Recpt. Dashboard
    //Admin DP Enlarge
    //Nav-Fix TopNav Case and Vol Case
    //Close Case Validation - Vol-Dashboard
    //Change Case ID to Case No.
    //Top-Five & Nearest Loader
    //CaseDetails - VolDashboard Loader
    //Check for no Users - Admin DB

17/02/2019 - Assumed Production Sunday
    //Loader Error - Top Five & Nearest
    //+91 / 022 Validation - Second Time
    //Status Bar Error - Close case
    //Assign Case Break - Top Nav somewhere
    //Top-Nav - Assign Case - Assign Case Error
    //Success - Case Raised Change text - 10s - close btn
    //Remove Case ID
    //Date - Vol CaseDetails and Recpt. DB - CaseDetails
    //Close Case Reason - Recpt. Dashboard
    //Section Multiple Pincodes - Formatting and Error checking
    //Change nature of business
    Vol. Dashboard - Active - Accept - Update
    Notification Center
    Case History Fix
    
    Vimal ---------------
    Time in creationDateStr is in 12HR format - change to 24HR
    Top-Nav-Tooltip - and if first (top-nav -> assign-case) - top-five and nearest error
    Current Case Status - Top Nav
    Reassign Case instead of Assign Case
    Assign Case - Vol Dashboard - Some Error - Date Can not be parsed
    Another NULL user - registration - happens when server is restarted while filling 2nd or 3rd step of registration
    All fields are coming in Preview page make if statements
    I can select same pincode again and again - Step3 ProfileCompletion. But when form is submitted data is clubed together